fix footer alignement text for mobile version

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -144,6 +144,8 @@ footer>img {
 
     footer span {
         height: auto;
+        width: 80%;
+        align-items: center;
     }
 
     .title {
